--- a/frontend/lawlingo-frontend/package.json
+++ b/frontend/lawlingo-frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "framer-motion": "^12.6.3",
     "gsap": "^3.12.7",
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
